-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.1.0-rc1
-
None
-
Ubuntu Maverick 10.10, 64bit
-
cbf608de01c779c16e47ec8e13f30eb48a4034ec (workaround for 2.1), b21523f96780bb405b6dd278a0d43cb928bb1fd2 (proper fix for 2.2), e7bba25446c122114f2e0130781a8bf23ea61a32 (fixed again for 2.4)
Depending on your locale your default generated changelog can include day names that can in turn break the packaging process (here's a Swedish one)
calendar (0.0.1) unstable; urgency=low
- Initial Release.
– per <per@unknown> mån, 24 jan 2011 22:16:24 +0100
would result in
Configuration unchanged, skipping qmake step.
Starting: "/usr/bin/make" -w
make: Går till katalogen "/home/per/QtSDK/Examples/4.7/widgets/analogclock-build-maemo"
make: Inget behöver göras för "first".
make: Lämnar katalogen "/home/per/QtSDK/Examples/4.7/widgets/analogclock-build-maemo"
The process "/usr/bin/make" exited normally.
Creating package file ...
Package Creation: Running command 'dpkg-buildpackage -nc -uc -us'.
dpkg-buildpackage: set CFLAGS to default value: -g -O2
dpkg-buildpackage: set CPPFLAGS to default value:
dpkg-buildpackage: set LDFLAGS to default value:
dpkg-buildpackage: set FFLAGS to default value: -g -O2
dpkg-buildpackage: set CXXFLAGS to default value: -g -O2
parsechangelog/debian: varning: debian/changelog(l5): felaktigt formaterad fotrad
LINE: – per <per@unknown> mån, 24 jan 2011 18:08:19 +0100
parsechangelog/debian: varning: debian/changelog(l5): hittade filslut där more change data or trailer förväntades
Use of uninitialized value $v in pattern match (m//) at /home/per/QtSDK/Maemo/4.6.2/madlib/perl5/Dpkg/Fields.pm line 229, <STDIN> line 5.
Use of uninitialized value $v in pattern match (m//) at /home/per/QtSDK/Maemo/4.6.2/madlib/perl5/Dpkg/Fields.pm line 229, <STDIN> line 5.
Packaging Error: Command 'dpkg-buildpackage -nc -uc -us' failed.Exit code: 255
Error while building project analogclock (target: Maemo)
When executing build step 'Packaging for Maemo'