Maemo: Don't let localized date get into debian/changelog.

Task-number: QTCREATORBUG-3589
Reviewed-by: Tobias Hunger